@@ -37,6 +37,8 @@ version 2.0.0:
 	  (James Vega)
 	* Many problems related to having an IM conversation and a chat open
 	  with the same name are fixed (Andrew Hart)
+	* Added tab management options to the tab right-click menu (Sadrul Habib
+	  Chowdhury)
 
 	Sounds:
 	* Beautiful new default sounds (Brad Turcotte)
